--- a/index.html
+++ b/index.html
@@ -28,14 +28,21 @@
             Atualmente, curso o 4º ano de direito no IBMEC e a formação em Desenvolvimento de software na Trybe</p>
     </section>
 
-    <main id="conteudo-principal">
-       <article id="artigo-aprendizagem">
-           <div id="titulo-aprendizagem"><h2> Aprendizagem </h2></div>
-           <div id="texto-aprendizagem"><p> O aprendizado na trybe tem sido muito interessante. A metodologia ativa nos permite descobrir os conteúdos por conta própria e avançar de acordo com o nosso tempo individual<br><br>No entanto, além da aprendizagem individual, também temos as aulas ao-vivo com o Especialista, o que complementa perfeitamente o estudo individual.<br><br> Em 1 mês sinto que aprendi muito e a cada dia evoluo mais!
-            </p></div>
-
-       </article>
-
+    <main id="conteudo-principal"> 
+        <section id="artigo-e-curiosidade">
+            <article id="artigo-aprendizagem">
+                <div id="titulo-aprendizagem"><h2> Aprendizagem </h2></div>
+                <div id="texto-aprendizagem">
+                    <p> O aprendizado na trybe tem sido muito interessante. A metodologia ativa nos permite descobrir os conteúdos por conta própria e avançar de acordo com o nosso tempo individual<br><br>No entanto, além da aprendizagem individual, também temos as aulas ao-vivo com o Especialista, o que complementa perfeitamente o estudo individual.<br><br> Em 1 mês sinto que aprendi muito e a cada dia evoluo mais!</p>
+                </div>
+            </article>
+            <aside id="curiosidade">
+                <div id="titulo-curiosidade"><h2>Curiosidade</h2></div>
+                <div id="texto-curiosidade"><p>Agora, uma curiosidade a respeito da aprendizagem na Trybe são as soft skills. <br><br> Diferentemente de outras escolas, a Trybe é uma escola que foca no desenvolvimento pessoal aliado ao desenvolvimento técnico</p>
+                </div>
+            </aside>
+        </section>
+       
        <section id="licoes">
            <div id="licoes-aprendidas">
 
