--- a/index.html
+++ b/index.html
@@ -28,6 +28,37 @@
             Atualmente, curso o 4º ano de direito no IBMEC e a formação em Desenvolvimento de software na Trybe</p>
     </section>
 
+    <main id="conteudo-principal">
+       <article id="artigo-aprendizagem">
+           <div id="titulo-aprendizagem"><h2> Aprendizagem </h2></div>
+           <div id="texto-aprendizagem"><p> O aprendizado na trybe tem sido muito interessante. A metodologia ativa nos permite descobrir os conteúdos por conta própria e avançar de acordo com o nosso tempo individual<br><br>No entanto, além da aprendizagem individual, também temos as aulas ao-vivo com o Especialista, o que complementa perfeitamente o estudo individual.<br><br> Em 1 mês sinto que aprendi muito e a cada dia evoluo mais!
+            </p></div>
+
+       </article>
+
+       <section id="licoes">
+           <div id="licoes-aprendidas">
+
+           </div>
+           <div id="licoes-a-aprender">
+
+           </div>
+
+       </section>
+
+       <section id="blocos">
+           <table>
+
+           </table>
+       </section>
+
+       <aside id="curriculo-trybe">
+
+       </aside>
+
+
+    </main>
+
     
 </body>
 </html>
