--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Lessons Learned</h1>
+        <h1 id="titulo">Trybe - Primeiras Lições</h1>
+        <nav id="menu-navegacao">
+            <ul>
+                <li><a id="nav-link"> Quem sou eu</a></li>
+                <li><a id="nav-link"> Aprendizagem</a></li>
+                <li><a id="nav-link"> Lições</a></li>
+                <li><a id="nav-link"> Blocos</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <section id="descricao">
-        <h2 id="descricao-titulo">Quem sou eu</h2>
+    <section id="quem-sou-eu">
+        <h2 id="quem-sou-eu-titulo">Quem sou eu</h2>
         <div><img id="minha_foto" src="unnamed.jpg" alt="Uma foto de Vinícius Chagas"></div>
         <p id="apresentacao">Olá, eu sou o <strong>Vinícius</strong> =) // sou nascido no Rio de Janeiro e tenho 25 anos.
             Embora atualmente eu  more no RJ, <em> pretendo me mudar para outra cidade em breve.</em>
             Já fui cadete da Academia Militar das Agulhas Negras, já iniciei uma empresa com dois amigos que não deu certo, e tive algumas experiências como estagiário jurídico em empresas e escritórios.
             Atualmente, curso o 4º ano de direito no IBMEC e a formação em Desenvolvimento de software na Trybe</p>
     </section>
+
     
 </body>
 </html>
