Changes in curiosity

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </article>
             <section id="curiosidade" class="lado-direito">
                 <div id="titulo-curiosidade"><h2>Curiosidade</h2></div>
-                <aside id="texto-curiosidade">Agora, uma curiosidade a respeito da aprendizagem na Trybe são as soft skills. 
+                <aside id="texto-curiosidade"> Uma curiosidade a respeito da aprendizagem na Trybe é o foco nas soft skills. 
                 </aside>
             </section>
         </section>
