--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
     </section>
     <main id="conteudo-principal"> 
         <section id="artigo-e-curiosidade">
-            <article id="artigo-aprendizagem">
+            <article id="artigo-aprendizagem" class="lado-esquerdo">
                 <div id="titulo-aprendizagem"><h2> Aprendizagem </h2></div>
                 <div id="texto-aprendizagem">
                     <p> O aprendizado na trybe tem sido muito interessante. A metodologia ativa nos permite descobrir os conteúdos por conta própria e avançar de acordo com o nosso tempo individual<br><br>No entanto, além da aprendizagem individual, também temos as aulas ao-vivo com o Especialista, o que complementa perfeitamente o estudo individual.<br><br> Em 1 mês sinto que aprendi muito e a cada dia evoluo mais!</p>
                 </div>
             </article>
-            <aside id="curiosidade">
+            <aside id="curiosidade" class="lado-direito">
                 <div id="titulo-curiosidade"><h2>Curiosidade</h2></div>
                 <div id="texto-curiosidade"><p>Agora, uma curiosidade a respeito da aprendizagem na Trybe são as soft skills. <br><br> Diferentemente de outras escolas, a Trybe é uma escola que foca no desenvolvimento pessoal aliado ao desenvolvimento técnico</p>
                 </div>
             </aside>
         </section>
        <section id="licoes">
-           <div id="licoes-aprendidas">
+           <div id="div-licoes-aprendidas">
                 <h2 id="titulo-licoes-aprendidas">Lições Aprendidas</h2>
                 <ol id="licoes_aprendidas">
                     <li>Unix</li>
@@ -56,7 +56,7 @@
                     <li>Empatia</li>
                 </ol>
            </div>
-           <div id="licoes-a-aprender">
+           <div id="div-licoes-a-aprender">
             <h2 id="titulo-licoes-a-aprender">Lições a Aprender</h2>
             <ul id="licoes_a_aprender">
                 <li>JavaScript</li>
