Changes in the content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lessons Learned</title>
-    <link rel="stylesheet" type= "text/css" href="style.css" media="screen"> 
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen"> 
 </head>
 <body>
     <header id="cabecalho">
@@ -18,7 +18,6 @@
             </ul>
         </nav>
     </header>
-
     <section id="quem-sou-eu">
         <h2 id="quem-sou-eu-titulo">Quem sou eu</h2>
         <div><img id="minha_foto" src="unnamed.jpg" alt="Uma foto de Vinícius Chagas"></div>
@@ -27,7 +26,6 @@
             Já fui cadete da Academia Militar das Agulhas Negras, já iniciei uma empresa com dois amigos que não deu certo, e tive algumas experiências como estagiário jurídico em empresas e escritórios.
             Atualmente, curso o 4º ano de direito no IBMEC e a formação em Desenvolvimento de software na Trybe</p>
     </section>
-
     <main id="conteudo-principal"> 
         <section id="artigo-e-curiosidade">
             <article id="artigo-aprendizagem">
@@ -42,11 +40,10 @@
                 </div>
             </aside>
         </section>
-       
        <section id="licoes">
            <div id="licoes-aprendidas">
                 <h2 id="titulo-licoes-aprendidas">Lições Aprendidas</h2>
-                <ul id="lista-licoes-aprendidas">
+                <ol id="licoes_aprendidas">
                     <li>Unix</li>
                     <li>Bash</li>
                     <li>Shell</li>
@@ -57,11 +54,11 @@
                     <li>CSS</li>
                     <li>Inteligência Emocional</li>
                     <li>Empatia</li>
-                </ul>
+                </ol>
            </div>
            <div id="licoes-a-aprender">
             <h2 id="titulo-licoes-a-aprender">Lições a Aprender</h2>
-            <ul id="lista-licoes-a-aprender">
+            <ul id="licoes_a_aprender">
                 <li>JavaScript</li>
                 <li>DOM</li>
                 <li>JavaScript ES6</li>
@@ -74,24 +71,18 @@
                 <li>NodeJS</li>
             </ul>
            </div>
-
        </section>
-
        <section id="blocos">
            <table>
 
            </table>
        </section>
-
        <aside id="curriculo-trybe">
             <h2>Se liga!</h2><br>
-            <p>Veja <a href="https://www.betrybe.com/formacao">aqui</a> o currículo completo da Trybe</p>
+            <p>Veja <a href="https://www.betrybe.com/formacao" target="_blank">aqui</a> o currículo completo da Trybe</p>
        </aside>
-
-
     </main>
-    <footer>Conteúdo feito com muito amor e carinho por Vinícius Chagas</footer>
-
-    
+    <footer id="rodape">Conteúdo feito com muito amor e carinho por Vinícius Chagas
+    </footer>
 </body>
 </html>
