Basic Content Structure Done

--- a/index.html
+++ b/index.html
@@ -45,10 +45,34 @@
        
        <section id="licoes">
            <div id="licoes-aprendidas">
-
+                <h2 id="titulo-licoes-aprendidas">Lições Aprendidas</h2>
+                <ul id="lista-licoes-aprendidas">
+                    <li>Unix</li>
+                    <li>Bash</li>
+                    <li>Shell</li>
+                    <li>Internet</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Inteligência Emocional</li>
+                    <li>Empatia</li>
+                </ul>
            </div>
            <div id="licoes-a-aprender">
-
+            <h2 id="titulo-licoes-a-aprender">Lições a Aprender</h2>
+            <ul id="lista-licoes-a-aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>JavaScript ES6</li>
+                <li>Testes</li>
+                <li>Soft Skills</li>
+                <li>React</li>
+                <li>Metodologias Ágeis</li>
+                <li>Context API</li>
+                <li>SQL</li>
+                <li>NodeJS</li>
+            </ul>
            </div>
 
        </section>
@@ -60,11 +84,13 @@
        </section>
 
        <aside id="curriculo-trybe">
-
+            <h2>Se liga!</h2><br>
+            <p>Veja <a href="https://www.betrybe.com/formacao">aqui</a> o currículo completo da Trybe</p>
        </aside>
 
 
     </main>
+    <footer>Conteúdo feito com muito amor e carinho por Vinícius Chagas</footer>
 
     
 </body>
