Testing tag aside

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </article>
             <section id="curiosidade" class="lado-direito">
                 <div id="titulo-curiosidade"><h2>Curiosidade</h2></div>
-                <aside id="texto-curiosidade"><p>Agora, uma curiosidade a respeito da aprendizagem na Trybe são as soft skills. <br><br> Diferentemente de outras escolas, a Trybe é uma escola que foca no desenvolvimento pessoal aliado ao desenvolvimento técnico</p>
+                <aside id="texto-curiosidade"><p>Agora, uma curiosidade a respeito da aprendizagem na Trybe são as soft skills. <br><br> Diferentemente de outras escolas, a Trybe é uma escola que foca no desenvolvimento pessoal aliado ao desenvolvimento técnico xxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
                 </aside>
             </section>
         </section>
