Fixing tag aside

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                     <p> O aprendizado na trybe tem sido muito interessante. A metodologia ativa nos permite descobrir os conteúdos por conta própria e avançar de acordo com o nosso tempo individual<br><br>No entanto, além da aprendizagem individual, também temos as aulas ao-vivo com o Especialista, o que complementa perfeitamente o estudo individual.<br><br> Em 1 mês sinto que aprendi muito e a cada dia evoluo mais!</p>
                 </div>
             </article>
-            <aside id="curiosidade" class="lado-direito">
+            <section id="curiosidade" class="lado-direito">
                 <div id="titulo-curiosidade"><h2>Curiosidade</h2></div>
-                <div id="texto-curiosidade"><p>Agora, uma curiosidade a respeito da aprendizagem na Trybe são as soft skills. <br><br> Diferentemente de outras escolas, a Trybe é uma escola que foca no desenvolvimento pessoal aliado ao desenvolvimento técnico</p>
-                </div>
-            </aside>
+                <aside id="texto-curiosidade"><p>Agora, uma curiosidade a respeito da aprendizagem na Trybe são as soft skills. <br><br> Diferentemente de outras escolas, a Trybe é uma escola que foca no desenvolvimento pessoal aliado ao desenvolvimento técnico</p>
+                </aside>
+            </section>
         </section>
        <section id="licoes">
            <div id="div-licoes-aprendidas">
