--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <header>
+    <h1>Gabriel Oliva</h1>
+  </header>
 </body>
 </html>
