--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <title>Lessons Learned</title>
-    </head>
-    <body>
-
-    </body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Lessons Learned</title>
+  </head>
+  <body>
+<!-- A barra deve possuir o ID "cabecalho" -->
+    <header id="cabecalho">
+      <h1 id="titulo">Lições Aprendidas</h1>
+    </header>
+  </body>
 </html>
