all style and html tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="./css/styleProject_1.css">
+      <link rel="stylesheet" href="style.css">
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;1,100;1,200;1,300&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
       <title>Proyecto </title>
@@ -103,6 +103,45 @@
                </div>
             </article>
          </section>
+         <br>
+         <section>
+            <h4><span class="fas fa-project-diagram contentIcons"></span>Exercícios realizados</h3>
+            <br>
+            <table class="table">
+               <tr>
+                  <th>Bloco</th>
+                  <th>Nome</th>
+                  <th>Exercício</th>
+               </tr>
+               <tr class="table-effect">
+                  <td>1</td>
+                  <td>Fundamentos, Introdução Unix & Bash</td>
+                  <td>Setup, Fundamentos, Unix & Bash</td>
+               </tr>
+               <tr class="table-effect">
+                  <td>2</td>
+                  <td>GitHub/Git</td>
+                  <td>Entendendo os Comandos/Internet</td>
+               </tr>
+               <tr class="table-effect">
+                  <td>3</td>
+                  <td>Introdução à HTML e CSS</td>
+                  <td>HTML & CSS: Estrutura e seletores</td>
+               </tr>
+               <tr class="table-effect">
+                  <td>4</td>
+                  <td>Introdução à JavaScript e Lógica de Programação</td>
+                  <td>Coming Soon</td>
+               </tr>
+            </table>
+         </section>
+         <br>
+         <br>
+         <br>
+         <footer id="rodape">
+            <h5>Made by Jose Daniel Arreaza with <span class="fas fa-coffee footerIcons"></span> and <span class="fas fa-heart footerIcons"></span></h5>
+         </footer>
+      </div>
    </body>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" integrity="sha512-F5QTlBqZlvuBEs9LQPqc1iZv2UMxcVXezbHzomzS6Df4MZMClge/8+gXrKw2fl5ysdk4rWjR0vKS7NNkfymaBQ==" crossorigin="anonymous"></script>
 </html>
