--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lessons Learned</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
     </header>
-    
 </body>
 </html>
