adc foto e dois primeiros requisitos

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head id="cabecalho">
+    <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width" />
         <title></title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <header><h1></h1></header>
+        <header id="cabecalho"git ><img id="minha_foto" id="eu" src="eu.jpg" alt="foto de frente expressando seriedade"><h1 id="titulo"></h1></header>
         <nav>
             <ul>
                 <li><a href="#home" >Página Inicial</a></li>
