--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <title>Lessons Learned</title>
   </head>
   <body>
-<!-- A barra deve possuir o ID "cabecalho" -->
+<!--  A barra deve possuir o ID "cabecalho" -->
     <header id="cabecalho">
-      <h1 id="titulo">Lições Aprendidas</h1>
+      <nav>
+        <h1 id="titulo">Lições Aprendidas</h1>
+
+      </nav>
     </header>
+<!--  A foto deve ser inserida utilizando
+      uma tag img com o ID "minha_foto" -->
+    <img id="minha_foto" src="./img/perfil.jpg" alt="Foto do perfil">
+
   </body>
 </html>
