--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Lessons Learned</title>
 </head>
 <body>
-
+    <header id="cabecalho">
+        <h1 id="titulo">Lições aprendidas - Trybe</h1>
+    </header>
 </body>
 </html>
