adding title and photo

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
    <body>
       <nav id="cabecalho">
          <ul>
-            <li id="titulo">
+            <li>
                <a href="#">
-                  <h1>Proyecto #BeTrybe</h1>
+                  <h1 id="titulo">Proyecto #BeTrybe</h1>
                </a>
             </li>
             <li><a href="#"><span class="fas fa-home navIcons"></span>Home</a></li>
@@ -23,7 +23,7 @@
       </nav>
       <div class="container">
          <header>
-            <img src="./img/pic_1.png" id="minha_foto" alt="Profile Picture from the user page, click here to access to the perfil" class="profilePic">
+            <img src="./pic_1.png" id="minha_foto" alt="Profile Picture from the user page, click here to access to the perfil" class="profilePic">
             <section class="personalDetails">
                <h2>Jose Daniel Arreaza</h2>
                <p>Tenho 27 anos, sou um estudante de desenvolvimento web na <strong>Trybe</strong></p>
@@ -39,12 +39,12 @@
          <hr>
          <main class="main">
             <section class="wrapper-content">
-               <article class="diarieTrybe lado-esquerdo">
+               <article class="lado-esquerdo">
                   <h3><span class="fas fa-book contentIcons"></span>Trybe Course</h3>
                   <br>
-                  Passaram-se duas semanas desde que inicie mi camino aqui, na <strong>Trybe</strong>. Un trecho lleno de enseçanzas fructiferas y bastantes satisfactorios en terminos de aprendizaje. Não sabia que poderia ficar tanto tempo grudado no computador estudando conteúdos que não conhecia havia meses. Os instrutores e equipe envolvida são excelentes e nos deixam bem confortáveis com o processo todo de aprendizagem, apesar de ser assustador as vezes, a quantidade de informações que precisamos aprender em um curto espaço de tempo. No final, consegui ficar totalmente focado no material oferecido. E satisfeito com o que aprendi. Estou ansioso para o que está vindo e esperando por nós. #BeTrybe #VQV
+                  Passaram-se duas semanas desde que inicie mi camino aqui, na <strong>Trybe</strong>. Un trecho lleno de enseçanzas fructiferas y bastantes satisfactorios en terminos de aprendizaje. Não sabia que poderia ficar tanto tempo grudado no computador estudando conteúdos que não conhecia havia meses. Os instrutores e equipe envolvida são excelentes e nos deixam bem confortáveis com o processo todo de aprendizagem, apesar de ser assustador as vezes, a quantidade de informações que precisamos aprender em um curto espaço de tempo. No final, consegui ficar totalmente focado no material oferecido.
                </article>
-               <aside class="aside lado-direito">
+               <aside class="lado-direito">
                   <h3><span class="fas fa-shapes contentIcons"></span>Actual content</h3>
                   <br>
                   <p> Até agora, estamos aprendendo as estruturas básicas dos sistemas e ferramentas que abrirão muitas portas para nós neste vasto mundo de desenvolvimento: Shell Script, HTML, CSS, Git e GitHub. E acima de tudo isso, prática. </p>
