--- a/index.html
+++ b/index.html
@@ -7,14 +7,38 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <header id="cabecalho"git ><img id="minha_foto" id="eu" src="eu.jpg" alt="foto de frente expressando seriedade"><h1 id="titulo"></h1></header>
-        <nav>
-            <ul>
-                <li><a href="#home" >Página Inicial</a></li>
-                <li><a href="#contact" >Sobre</a></li>
-                <li><a href="#contact" >Contato</a></li>
+        <header id="cabecalho"git >
+            <img id="minha_foto" id="eu" src="eu.jpg" alt="foto de frente expressando seriedade">
+            <h1 id="titulo"></h1>
+        </header>
+        <main>
+            <h2>Lições Aprendidas</h2>
+            <ol id="licoes_aprendidas">
+                <li>História do Linux</li>
+                <li>Comandos básicos no Terminal</li>
+                <li>Como trabalhar em grupo</li>
+                <li>Desenvolver empatia no trabalho</li>
+                <li>Utilizar o Git e GitHub</li>
+                <li>Estruturar uma página em HTML</li>
+                <li>Estilizar com CSS</li>
+                <li>Conceito de block e inline em CSS</li>
+                <li>Como utilizar HTML semântica</li>
+                <li>Como desenvolver projetos</li>
+            </ol>
+            <h2>Lições que quero aprender</h2>
+            <ul id="licoes_a_aprender">
+                <li>Como programar em JS</li>
+                <li>Utilizando JS em sites com HTML e CSS</li>
+                <li>Como realiar projetos em equipe</li>
+                <li>Desenvolver pelo framework REACT</li>
+                <li>Aprender sobre Banco de Dados</li>
+                <li>Utilizar ferramentas de JS poderosas</li>
+                <li>Fazer um web app responsivo</li>
+                <li>Conceitos de Ciência da Computação</li>
+                <li>Como liderar projetos</li>
+                <li>Como alcançar um emprego de alto nível</li>
             </ul>
-        </nav>
+        </main>
         <main id="home">
             <h2></h2>
             <article>
@@ -51,8 +75,8 @@
         <aside>
             
         </aside>
-        <footer id="contact">
-            <p>Conteúdo compilado por:</p>
+        <footer id="rodape">
+            <p>Conteúdo desenvolvido por:Luiz Henrique</p>
         </footer>
     </body>
 </html>
