--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header id="cabecalho">
         <h1>Lições aprendidas - trybe</h1>
-    </header>  
+    </header>
+    <img id="minha-foto" src="Minha-foto.jpg" alt="foto-Johne" width="200px">
 </body>
 </html>
