--- a/index.html
+++ b/index.html
@@ -6,5 +6,18 @@
 </head>
 <body>
     <header id = "cabecalho"><h1 id = "titulo">Titulo</h1></header>
+    <img id = "minha_foto" src = "rpufal.png">
+    <ol id = "licoes_aprendidas">
+        <li>Bash</li>
+        <li>Git</li>
+        <li>Github</li>
+        <li>Html</li>
+        <li>CSS</li>
+        <li>Inteligência emocional</li>
+        <li>Item 7</li>
+        <li>Item 8</li>
+        <li>Item 9</li>
+        <li>Item 10</li>
+    </ol>
 </body>
 </html>
