--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe</h1>
     </header>
+    <img id="minha_foto" src="eu.png" alt="Foto de João Henrique andando de barco">
 </body>
 </html>
