--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
   <header id="cabecalho">
     <h1 id="titulo">Lessons Learned - Trybe</h1>
   </header>
+  <article>
+    <section>
+      <img src="/natalianegreiros.jpeg" alt="">
+    </section>
+  </article>
 </body>
 </html>
