--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <header id="cabecalho">
     <h1 id="titulo">Henrique Brito Elias</h1>
   </header>
+  <img src="foto.jpg" alt="Foto de Henrique Brito Elias">
 </body>
 </html>
