--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 <header id="cabecalho">
     <h1 id="titulo">Projeto - Lessons Learned</h1>
+    <img id="minha_foto" src="layo.jpg" alt="layoFoto">
 </header>
+
+    <div></div>
 </body>
 </html>
