--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header id="cabecalho"git >
             <img id="minha_foto" id="eu" src="eu.jpg" alt="foto de frente expressando seriedade">
-            <h1 id="titulo"></h1>
+            <h1 id="titulo">Lições Aprendidas: Trybe!</h1>
         </header>
         <main>
             <h2>Lições Aprendidas</h2>
@@ -76,7 +76,7 @@
             
         </aside>
         <footer id="rodape">
-            <p>Conteúdo desenvolvido por:Luiz Henrique</p>
+            <p>Conteúdo desenvolvido por: <a href="https://lhfmworker.github.io" target="_blank">Luiz Henrique</a></p>
         </footer>
     </body>
 </html>
