--- a/index.html
+++ b/index.html
@@ -19,5 +19,17 @@
         <li>Item 9</li>
         <li>Item 10</li>
     </ol>
+    <ul id = "licoes a aprender">
+        <li>Javascript</li>
+        <li>Algoritmos</li>
+        <li>Banco de dados</li>
+        <li>Front end</li>
+        <li>Back end</li>
+        <li>Precificação</li>
+        <li>Item 7</li>
+        <li>Item 8</li>
+        <li>Item 9</li>
+        <li>Item 10</li>
+    </ul>
 </body>
 </html>
