--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <header id="cabecalho">
     <h1 id="titulo">Lições Aprendidas - Trybe</h1>
   </header>
+  <img src="./me.jpg" alt="Foto de Thiago Granville" id="minha_foto">
 </body>
 </html>
