--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
     </header>
+    <div>
+        <img src="20201004_155453.jpg" alt="Foto-minha" id="minha_foto">
+    </div>
 </body>
 </html>
