[3] - Adiciona ID na foto pessoal

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
   <article>
     <section>
-      <img src="/natalianegreiros.jpeg" alt="">
+      <img id="minha_foto" src="/natalianegreiros.jpeg" alt="Foto de Natália">
     </section>
   </article>
 </body>
