--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lições Aprendidas - Trybe</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe</h1>
     </header>
-
+    <main>
+        <img src="minha_foto.jpg" alt="minha foto" id="minha_foto">
+        
+    </main>
 </body>
 </html>
