--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
         <li>Item 9</li>
         <li>Item 10</li>
     </ul>
+    <footer id = "rodape"><a href="https://www.betrybe.com/" target = "_blank">Site da Trybe</a></footer>
 </body>
 </html>
