--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
 </head>
 <body>
   <header id="cabecalho">
-    <h1 id="titulo">Henrique Brito Elias</h1>
+    <h1 id="titulo">Henrique Brito Elias - Lições Aprendidas</h1>
   </header>
   <img src="foto.jpg" alt="Foto de Henrique Brito Elias">
+  <h3>Lições</h3>
+  <ol id="licoes_aprendidas">
+    <li>Unix</li>
+    <li>Git</li>
+    <li>GitHub</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Semantic HTML</li>
+    <li>Slack</li>
+    <li>Zoom</li>
+    <li>Aprendizagem Ativa</li>
+    <li>Auto-Conhecimento</li>
+  </ol>
+
+  </ol>
 </body>
 </html>
