--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Lessons Learned</title>
 </head>
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned - Trybe</h1>
     </header>
+    <main>
+        <img id="minha_foto" src="https://user-images.githubusercontent.com/21299113/99570313-822e7e00-29b0-11eb-9806-e0cf7c4a3af1.png" alt="profile_picture">
+    </main>
 </body>
 </html>
