--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header id="cabecalho">
     <h1 id="titulo">Henrique Brito Elias - Lições Aprendidas</h1>
   </header>
-  <img src="foto.jpg" alt="Foto de Henrique Brito Elias">
+  <img src="foto.jpg" alt="Foto de Henrique Brito Elias" id="minha foto">
   <h3>Lições</h3>
   <ol id="licoes_aprendidas">
     <li>Unix</li>
