--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
     </header>
     <main>
         <img src="minha_foto.jpg" alt="minha foto" id="minha_foto">
-        
+        <section id="listas"></section>
+            <ol id="licoes_aprendidas" class="listas">
+                <li>Bash</li>
+                <li>Internet</li>
+                <li>Git</li>
+                <li>Github</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Soft Skills</li>
+                <li>Shell</li>
+                <li>Unix</li>
+                <li>Hard Skills</li>
+            </ol>
     </main>
 </body>
 </html>
