--- a/index.html
+++ b/index.html
@@ -4,8 +4,56 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lessons Learned Project</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  
+  <header id="cabecalho">
+    <h1 id="title">Lições Aprendidas | Trybe</h1>
+    <img id="minha_foto" src="assets/img/rsz_1img_20201111_224535.jpg" alt="">
+    <nav>
+      <a href="https://www.linkedin.com/in/rafaelgeronimo/" target="_blank">LinkedIn</a>
+      <a href="https://github.com/rafaelgeronimo" target="_blank">GitHub</a>
+    </nav>
+  </header>
+  <main>
+    <section id="lists">
+      <ol id="licoes_aprendidas">
+        <li>Bash & Shell</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Soft Skills</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Semantic HTML</li>
+        <li>Não mutar o professor</li>
+      </ol>
+      <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>CSS Responsive</li>
+        <li>ES6</li>
+        <li>Unit Tests</li>
+        <li>React</li>
+        <li>Vue</li>
+        <li>Next</li>
+        <li>Node</li>
+        <li>SQL</li>
+      </ul>
+    </section>
+    <article id="aprendizado">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda eius alias enim ea. Illum autem error nihil eos tempore explicabo quod, corporis et officia porro, veniam necessitatibus molestias aperiam cupiditate!
+        <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam obcaecati fugiat atque in sit dolore totam recusandae vitae repudiandae mollitia nostrum voluptates, corporis similique ad consequuntur consectetur nisi dolorem itaque.
+      </p>
+    </article>
+    <aside id="passagem">
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate nobis sapiente repellat quis, debitis molestiae, quaerat placeat minus sit sunt rem voluptatibus? Itaque magni reprehenderit voluptatem, distinctio fugit libero beatae.</p>
+    </aside>
+  </main>
+  <footer id="rodape">
+
+  </footer>
 </body>
 </html>
