--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
 <!--  A foto deve ser inserida utilizando
       uma tag img com o ID "minha_foto" -->
     <img id="minha_foto" src="./img/perfil.jpg" alt="Foto do perfil">
+<!--  A lista deve ser numerada e possuir 
+      o ID "licoes_aprendidas" -->
+    <ul id="licoes_aprendidas">
+<!-- A lista deve possuir 10 itens -->
+      <li>Linux</li>
+      <li>Terminal</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Soft Skills</li>
+      <li>Organização</li>
+      <li>Pontualidade</li>
+      <li>SEO</li>
+      <li>Colaboração</li>
+      <li>Empatia</li>
+    </ul>
 
   </body>
 </html>
