Consertando primeiro requisito - segundo requisito

--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
   <title>Document</title>
 </head>
 <body>
+  <header id="cabecalho">
+    <h1 id="titulo">Lições aprendidas -Trybe</h1>
+    <nav>
+      <a href="" >Inicio</a>
+      <a href="" >Rodapé</a>
+    </nav>
+  </header>
 </body>
 </html>
