--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
                 <li>Unix</li>
                 <li>Hard Skills</li>
             </ol>
+            <ul id="licoes_a_aprender" class="listas">
+                <li>JavaScript</li>
+                <li>Node</li>
+                <li>Back-End</li>
+                <li>Lógica</li>
+                <li>DOM</li>
+                <li>React</li>
+                <li>API</li>
+                <li>SQL</li>
+                <li>Frameworks</li>
+                <li>Mais Soft Skills</li>
+            </ul>
     </main>
 </body>
 </html>
