--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
     <li>Aprendizagem Ativa</li>
     <li>Auto-Conhecimento</li>
   </ol>
+  <ul id="licoes_a_aprender">
+    <li>JavaScript</li>
+    <li>DOM</li>
+    <li>Python</li>
+    <li>CSS Responsive</li>
+    <li>ES6</li>
+    <li>HOF</li>
+    <li>Unit Test</li>
+    <li>React</li>
+    <li>Node</li>
+    <li>SQL</li>
+  </ul>
 
   </ol>
 </body>
