--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      
+      <header id="cabecalho">
+          <h1 id="titulo">Lessons Learned | Trybe</h1>
+      </header>
+    <img src="foto.jpg"  id="minha_foto">
   </body>
