--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+        <img id="minha_foto" src="face_500kb.jpg" alt="foto de Luis Carlos Goandete">
     </header>
 </body>
 </html>
