--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
                 <li>Mais Soft Skills</li>
             </ul>
     </main>
-    <footer id="rodape"><h4>Todos os direitos reservados, <a href="https://tiagopaz2000.github.io/portfolio/">Tiago Paz</a></h4></footer>
+    <footer id="rodape"><h4>Todos os direitos reservados, <a href="https://tiagopaz2000.github.io/portfolio/" target="_blank">Tiago Paz</a></h4></footer>
 </body>
 </html>
