--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <header id="cabecalho">
+    <h1 id="titulo">Lições Aprendidas - Trybe</h1>
+  </header>
+  <section>
+    <img id="minha_foto" src="dani.png" alt="Fodo de perfil de uma pessoa" width="200">
+  </section>
 </body>
 </html>
