--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
     <h1 id="titulo">Lições Aprendidas - Trybe</h1>
   </header>
   <img src="./me.jpg" alt="Foto de Thiago Granville" id="minha_foto">
+  <ol id="licoes_aprendidas">
+    <li>Unix</li>
+    <li>Bash</li>
+    <li>Git</li>
+    <li>Github</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>HTML Semântico</li>
+    <li>Slack</li>
+    <li>Zoom</li>
+    <li>Inteligência emocional</li>
+  </ol>
 </body>
 </html>
