--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <header id="cabecalho">
             <h1 id="titulo">titulo</h1>
+            <img src="https://rodrigoneoex.github.io/atual.jpeg" alt="homem camisa verde" id="minha_foto" width="200px">
         </header>
     </body>
 </html>
