--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
         <link rel="stylesheet" type="text/css" href="style.css">
 
       <body>
-          
+          <header id="cabecalho">
+              <h1 id="titulo">Lessons Learned - Trybe</h1>
+          </header>
+
+          <main>
+              
+          </main>
       </body>
 </html>
