update html files, adding articles

--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
          </header>
          <hr>
          <main class="main">
-            <section class="wrapper-content">
+
                <article class="lado-esquerdo">
                   <h3><span class="fas fa-book contentIcons"></span>Trybe Course</h3>
                   <br>
-                  Passaram-se duas semanas desde que inicie mi camino aqui, na <strong>Trybe</strong>. Un trecho lleno de enseçanzas fructiferas y bastantes satisfactorios en terminos de aprendizaje. Não sabia que poderia ficar tanto tempo grudado no computador estudando conteúdos que não conhecia havia meses. Os instrutores e equipe envolvida são excelentes e nos deixam bem confortáveis com o processo todo de aprendizagem, apesar de ser assustador as vezes, a quantidade de informações que precisamos aprender em um curto espaço de tempo. No final, consegui ficar totalmente focado no material oferecido.
+                  <p>
+                  Passaram-se duas semanas desde que inicie mi camino aqui, na Trybe. Un trecho lleno de enseçanzas fructiferas y bastantes satisfactorios en terminos de aprendizaje. Não sabia que poderia ficar tanto tempo grudado no computador estudando conteúdos que não conhecia havia meses. Os instrutores e equipe envolvida são excelentes e nos deixam bem confortáveis com o processo todo de aprendizagem, apesar de ser assustador as vezes, a quantidade de informações que precisamos aprender em um curto espaço de tempo. No final, consegui ficar totalmente focado no material oferecido.
+                </p>
                </article>
                <aside class="lado-direito">
                   <h3><span class="fas fa-shapes contentIcons"></span>Actual content</h3>
@@ -51,7 +53,7 @@
                   <br>
                   <br>
                </aside>
-            </section>
+
          </main>
          <section>
             <h3 class="list-title"><span class="fab fa-leanpub contentIcons"></span>Liçoes</h3>
