--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <header id="cabecalho">
         <h1>Lições aprendidas - trybe</h1>
     </header>
-    <img id="minha-foto" src="Minha-foto.jpg" alt="foto-Johne" width="200px">
+    <img id="minha_foto" src="Minha-foto.jpg" alt="foto-Johne" width="200px">
+    <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Empatia</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Inspect</li>
+        <li>Semantic HTML</li>
+    </ol>
 </body>
 </html>
