--- a/index.html
+++ b/index.html
@@ -40,30 +40,19 @@
             </ul>
         </main>
         <main id="home">
-            <h2></h2>
             <article>
-                <h3></h3>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-                <p> </p>
+                <h3>Meu aprendizado na Trybe <em>so far</em>...</h3>
+                <p> Quando iniciei o curso há pouco tempo confesso que não imaginava que seria o que está sendo. Para falar a verdade, achei que seria muito menos impactante e olhem que só se passaram <b>2 semanas!</b><br> Atualmente eu já me sinto como um desenvolvedor web iniciante, realizando tarefas antes inimagináveis, como estruturar uma página em HTML estilizando com CSS e publicando ela através de pushs, commits e pull requests no Git/GitHub.<br></p>
             </article>
-            <h2></h2>
-            <section>
-                <h3></h3>
-                <img src="" alt="">
-                <p></p>
-            </section>
-            <section>
-                <h3></h3>
-                <img src="" alt="">
-                <p></p>
-            </section>
+            <aside>
+                <section>
+                    <h3>Por exemplo...</h3>
+                    <img src="okayhand.jpg" alt="ate agora tudo certo">
+                    <p>Esses dias eu terminei meu web portfolio (cujo link você pode acessar por <a href="https://lhfmworker.github.io/" target="_blank">aqui</a>)</p>
+                </section>
+                <section>
+                </section>
+            </aside>
             <nav>
                 <h3>Referências</h3>
                 <ul>
@@ -71,10 +60,7 @@
                     <li><a href=""></a></li>
                 </ul>
             </nav>
-        </main>    
-        <aside>
-            
-        </aside>
+        </main>
         <footer id="rodape">
             <p>Conteúdo desenvolvido por: <a href="https://lhfmworker.github.io" target="_blank">Luiz Henrique</a></p>
         </footer>
