--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                     Antes de iniciar na Trybe eu estava tentando estudar programação à 3 meses, e só havia aprendido o básico de HTML e CSS, mas depois de 2 semanas no curso, eu já aprendi tudo que tinha ficado tanto tempo estudando e mais coisas, como Git, Github, Bash, Shell e Soft Skills. <br> A cada dia que passa e olho para trás, vejo o quanto estou evoluindo e sinto que entrar na <a href="https://www.betrybe.com/" target="_blank">Trybe</a> foi uma das melhores escolhas que tomei na vida.
                 </p>
             </article>
+            <aside class="texto">
+                <p>
+                    Antes de começar as aulas na Trybe, achei que por saber um pouco sobre o conteúdo inicial nem ia precisar me esforçar, e eu estava muito errado, as aulas são bem explicativas e didáticas, mas a matéria é intensa e estamos sempre aprendendo coisas novas e desafiadoras.
+                </p>
+            </aside>
     </main>
     <footer id="rodape"><h4>Todos os direitos reservados, <a href="https://tiagopaz2000.github.io/portfolio/" target="_blank">Tiago Paz</a></h4></footer>
 
