[4] - Adiciona lista ordenada com 10 itens

--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lessons Learned</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header id="cabecalho">
     <h1 id="titulo">Lessons Learned - Trybe</h1>
-  </header>    
-      <img id="minha_foto" src="/natalianegreiros.jpeg" alt="Foto de Natália">  
+  </header>
+  <img id="minha_foto" src="/natalianegreiros.jpeg" alt="Foto de Natália">
+  <h2>Lições</h2>
+  <ol id="licoes_aprendidas">    
+    <li>Unix</li>
+    <li>Bash</li>
+    <li>GIT</li>
+    <li>Github</li>
+    <li>Internet</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Zoom</li>
+    <li>Slack</li>
+    <li>Empatia</li>
+  </ol>
+
 </body>
+
 </html>
