--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1 id="titulo">Henrique Brito Elias - Lições Aprendidas</h1>
   </header>
   <img src="foto.jpg" alt="Foto de Henrique Brito Elias" id="minha_foto">
+  <p><a href="https://github.com/henriquebelias" target="_blank">Henrique Brito Elias - GitHub</a></p>
   <h3>Lições</h3>
   <ol id="licoes_aprendidas">
     <li>Unix</li>
