--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           </header>
 
           <main>
-              
+              <img src="/sauloimg.jpeg" alt="Imagem de Saulo Kirchmaier" id="minha_foto">
           </main>
       </body>
 </html>
