--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <title>Lessons-Learned-Project</title>
 </head>
 <body>
+    <header id="cabecalho">
+        <h1 id="titulo">Lessons Learned Project</h1>
+    </header>
 </body>
 </html>
