10 requisito completo + table

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe</h1>
+        <nav>
+            <table>
+                <tr>
+                    <tr>Portfolio</tr>
+                    <tr>Git Hub</tr>
+                </tr>
+            </table>
+        </nav>
     </header>
     <main>
         <img src="minha_foto.jpg" alt="minha foto" id="minha_foto">
