--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 
-    <link rel="stylesheet" href="style.css">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lessons Learned | Trybe</title>
+
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
     <header id="cabecalho">
-        <h1 id="titulo"></h1>
+        <h1 id="titulo">Lessons Learned | Trybe</h1>
     </header>
+
+    <div id="corpo">
+        <main>
+            <article>
+                <section>
+                    <figure>
+                        <a href="https://www.instagram.com/matheusmrtno/" target="_blank"><img id="minha_foto" src="minha_foto.jpeg" alt="Minha foto de perfil" /></a>
+                        <figcaption>Clique na foto para acessar meu instagram</figcaption>
+                    </figure>
+                </section>
+            </article>
+        </main>
+    </div>
 </body>
+
 </html>
