--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
       <li>Colaboração</li>
       <li>Empatia</li>
     </ul>
+<!--  A lista deve ser numerada e possuir 
+      o ID "licoes_a_aprender" -->
+    <ul id="licoes_a_aprender">
+<!-- A lista deve possuir 10 itens -->
+      <li>JavaScript</li>
+      <li>React</li>
+      <li>Redux</li>
+      <li>Python</li>
+      <li>Responsividade</li>
+      <li>Banco de Dados</li>
+      <li>Estrutura de Dados</li>
+      <li>Comunicação</li>
+      <li>Back-End</li>
+      <li>Node.JS</li>
+    </ul>
 
+    <footer id="rodape">
+      Desenvolvido por: Felipe Brigagão de Almeida - 24 de Novembro de 2020.
+    </footer>
   </body>
 </html>
