--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>  
+    <body>
+        <header id="cabecalho">
+            <h1 id="titulo">Primeiro Projeto</h1>
+        </header>
     </body>
 </html>
