--- a/index.html
+++ b/index.html
@@ -12,5 +12,19 @@
             <h1 id="titulo">titulo</h1>
             <img src="https://rodrigoneoex.github.io/atual.jpeg" alt="homem camisa verde" id="minha_foto" width="200px">
         </header>
+        <main>
+            <ol #licoes_aprendidas>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Internet</li>
+                <li>CSS</li>
+                <li>VSCode</li>
+                <li>HTML</li>
+                <li>Economizar Dedos</li>
+                <li>Softskills</li>
+                <li>Hardskills</li>
+                <li>Bash</li>
+            </ol>
+        </main>
     </body>
 </html>
