--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <header id="cabecalho">
         <h1 id="titulo">Gabriel Mendonça</h1>
     </header>
+    <main>
+        <img id="minha_foto" src="/Images/foto.jpg" alt="Foto de Gabriel">
+    </main>
 </body>
 
 </html>
