--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <title>Challenge: The boxer model</title>
+        <title>Lessons Learned - Projeto</title>
     </head>
     <body>
-
+        <header id="cabecalho">
+            <h1 id="titulo">Lessons Learned</h1>
+        </header>
     </body>
 </html>
