adicionando uma foto minha

--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto1</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <header id="cabecalho">
         <h1 id="titulo">O que eu aprendi na Trybe até agora</h1>
+
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="https://www.betrybe.com/">Trybe</a></li>
+        </ul>
     </header>
 
+    <img id="minha_foto" src="rsz_21perfil.png" alt="me">
+
+    </section>
+
 </body>
+
 </html>
