--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
       <header id="cabecalho">
           <h1 id="titulo">Lições aprendidas - Trybe!</h1>
       </header>
+      <img id="minha_foto" src="retrato1.png" alt="foto rafael azevedo">
   </body>
 </html>
