Quinto requisito: Adiciona lista de lições a aprender

--- a/index.html
+++ b/index.html
@@ -23,5 +23,17 @@
     <li>Zoom</li>
     <li>Inteligência emocional</li>
   </ol>
+  <ul id="licoes_a_aprender">
+   <li>Javascript</li>
+   <li>DOM</li>
+   <li>Forms</li>
+   <li>CSS responsivo</li>
+   <li>ES6</li>
+   <li>HOF</li>
+   <li>Testes unitários</li>
+   <li>React</li>
+   <li>Node</li>
+   <li>SQL</li>
+  </ul>
 </body>
 </html>
