--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <header id="cabecalho">
+        <h1 id="titulo">Título</h1>
+    </header>
 
 </body>
 </html>
