--- a/index.html
+++ b/index.html
@@ -26,5 +26,17 @@
     <li>Slack</li>
     <li>Empatia</li>
   </ol>
+  <ul id="licoes_a_aprender">
+    <li>Lógica de Programação</li>
+    <li>Javascript</li>
+    <li>DOM</li>
+    <li>Forms</li>
+    <li>CSS - Flexbox</li>
+    <li>CSS - Responsivo</li>
+    <li>Testes</li>
+    <li>React</li>
+    <li>Python</li>
+    <li>Metodolodias Ágeis</li>
+  </ul>
 </body>
 </html>
