--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     <h1 id="titulo">Projeto - Lessons Learned</h1>
     <img id="minha_foto" src="layo.jpg" alt="layoFoto">
 </header>
-
-    <div></div>
+    <main>
+    <ol id="licoes_aprendidas">
+        <li>Linux</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Organização</li>
+        <li>Comprometimento</li>
+        <li>Inteligencia emocional</li>
+        <li>Colaboração</li>
+        <li>Analise</li>
+    </ol>
+    </main>
 </body>
 </html>
