--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     </header>
     <main>
         <img id="minha_foto" src="https://user-images.githubusercontent.com/21299113/99570313-822e7e00-29b0-11eb-9806-e0cf7c4a3af1.png" alt="profile_picture">
+        <ol class="licoes_aprendidas">
+            <li>Fundamentos Web</li>
+            <li>Unix & Bash</li>
+            <li>Git & Github</li>
+            <li>Internet</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Semantic HTML</li>
+            <li>Slack & Zoom</li>
+            <li>Soft Skills</li>
+            <li>Emotional intelligence</li>
+        </ol>
     </main>
 </body>
 </html>
