add step 5 list

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
                 <li>Hardskills</li>
                 <li>Bash</li>
             </ol>
+            <ul #licoes_a_aprender>
+                <li>sao</li>
+                <li>tantas</li>
+                <li>coisas</li>
+                <li>que</li>
+                <li>fica</li>
+                <li>dificil</li>
+                <li>de</li>
+                <li>decorar</li>
+                <li>ou</li>
+                <li>enumerar</li>
+            </ul>
         </main>
     </body>
 </html>
