--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
   <header id="cabecalho">
     <h1 id="titulo">Lições Aprendidas - Trybe</h1>
   </header>
-  <section>
-    <img id="minha_foto" src="dani.png" alt="Fodo de perfil de uma pessoa" width="200">
-  </section>
+  <main>
+    <section>
+      <img id="minha_foto" src="dani.png" alt="Fodo de perfil de uma pessoa" width="200">
+    </section>
+    <section>
+      <ol id="licoes_aprendidas">
+        <li>Unix & Bash</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Como a Internet Funciona</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>HTML Semântico</li>
+        <li>Inspect</li>
+        <li>Zoom</li>
+        <li>Slido</li>
+
+      </ol>
+    </section>
+  </main>
 </body>
 </html>
