--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <body>
   <header id="cabecalho">
     <h1 id="title">Lições Aprendidas | Trybe</h1>
-    <img id="minha_foto" src="assets/img/rsz_1img_20201111_224535.jpg" alt="">
-    <nav>
-      <a href="https://www.linkedin.com/in/rafaelgeronimo/" target="_blank">LinkedIn</a>
-      <a href="https://github.com/rafaelgeronimo" target="_blank">GitHub</a>
-    </nav>
+    <figure>
+      <img id="minha_foto" src="assets/img/rsz_1img_20201111_224535.jpg" alt="">
+      <nav>
+        <a href="https://www.linkedin.com/in/rafaelgeronimo/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/rafaelgeronimo" target="_blank">GitHub</a>
+      </nav>
+    </figure>
+    
   </header>
   <main>
     <section id="lists">
