--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <li>Node</li>
     <li>SQL</li>
   </ul>
+  <article>
+    <p>Após duas semanas de Trybe consigo perceber a minha evolução, comecei sem nenhum conhecimento prévio na área do desenvolvimento, já que vim de outra completamente diferente. Hoje consigo fazer páginas web, que apesar de serem simples, já são um grande avanço para mim. Sei que daqui pra frente é só melhoria e vou com tudo para conseguir alcançar esse objetivo. #VQV #GoTrybe</p>
+  </article>
   <footer id="rodape"></footer>
 </body>
 </html>
