step2 | add header and h1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width" />
     </head>
     <body>
-        
+        <header id="cabecalho">
+            <h1 id="titulo">Giovani Lopes Diccini</h1>
+        </header>
     </body>
 </html>
