--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body> 
+<body>
+    <header id="cabecalho">
+        <h1 id="titulo">
+            Meu projeto!
+        </h1>
+    </header>
+
 </body>
 </html>
