--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            
+        <header id="cabecalho">
+            <h1 id="titulo">
+                Lições aprendidas - Trybe!
+            </h1>
         </header>
         <main>
 
