update html files

--- a/index.html
+++ b/index.html
@@ -47,11 +47,9 @@
                 </p>
                </article>
                <aside class="lado-direito">
-                  <h3><span class="fas fa-shapes contentIcons"></span>Actual content</h3>
+                  <h3><span class="fas fa-shapes contentIcons"></span>passagem sobre meu <br> aprendizado</h3>
                   <br>
                   <p> Até agora, estamos aprendendo as estruturas básicas dos sistemas e ferramentas que abrirão muitas portas para nós neste vasto mundo de desenvolvimento: Shell Script, HTML, CSS, Git e GitHub. E acima de tudo isso, prática. </p>
-                  <br>
-                  <br>
                </aside>
 
          </main>
@@ -60,7 +58,6 @@
             <br>
             <article class="lists">
                <ol id="licoes_aprendidas">
-                  <h4 class="listTitle">Liçoes aprendidas</h4>
                   <li>Unix</li>
                   <li>Git</li>
                   <li>GitHub</li>
@@ -69,9 +66,10 @@
                   <li>Semanthic HTML</li>
                   <li>Empatia</li>
                   <li>Colaboração</li>
+                  <li>Ajuda</li>
+                  <li>Gratidão</li>
                </ol>
                <ul id="licoes_a_aprender">
-                  <h4 class="listTitle">Liçoes a aprender</h4>
                   <li>JavaScript</li>
                   <li>DOM</li>
                   <li>Forms</li>
@@ -79,7 +77,9 @@
                   <li>Node</li>
                   <li>SQL</li>
                   <li>Python</li>
-                  <li>BeTrybe</li>
+                  <li>Logica</li>
+                  <li>Coding Skills</li>
+                  <li>Best coding practices</li>
                </ul>
             </article>
             <article class="trybeLessons">
