--- a/index.html
+++ b/index.html
@@ -11,5 +11,20 @@
         <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
         <img id="minha_foto" src="face_500kb.jpg" alt="foto de Luis Carlos Goandete">
     </header>
+
+    <main>
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Empatia</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Inspect</li>
+            <li>Semantic HTML</li>
+        </ol>
+    </main>
 </body>
 </html>
