--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header id="cabecalho">
-            <h1 id="titulo">Primeiro Projeto</h1>
+            <h1 id="titulo">Lições Aprendidas</h1>
         </header>
     </body>
 </html>
