--- a/index.html
+++ b/index.html
@@ -11,5 +11,21 @@
       <header id="cabecalho">
           <h1 id="titulo">Lessons Learned | Trybe</h1>
       </header>
-    <img src="foto.jpg"  id="minha_foto">
+      <main>
+        <img src="foto.jpg"  id="minha_foto">
+        <ul id="licoes_aprendidas">
+            <h2>Lições Aprendidas:</h2>
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Empatia</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Inspect</li>
+            <li>Semantic HTML</li>
+        </ul>
+      </main>
+      
   </body>
