--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
                 <li>enumerar</li>
             </ul>
         </main>
+        <footer #rodape>
+            rodape
+        </footer>
     </body>
 </html>
