--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
   <article>
     <p>Após duas semanas de Trybe consigo perceber a minha evolução, comecei sem nenhum conhecimento prévio na área do desenvolvimento, já que vim de outra completamente diferente. Hoje consigo fazer páginas web, que apesar de serem simples, já são um grande avanço para mim. Sei que daqui pra frente é só melhoria e vou com tudo para conseguir alcançar esse objetivo. #VQV #GoTrybe</p>
   </article>
+  <aside>
+    <p>Com duas semanas de ensino aprendi a criar páginas web e as colocar online, sempre observando o versionamento do código.</p>
+  </aside>
   <footer id="rodape"></footer>
 </body>
 </html>
