--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     </header>
     <main>
         <img id="minha_foto" src="/Images/foto.jpg" alt="Foto de Gabriel">
+        <h3>Lições aprendidas</h3>
+        <ol id="licoes_aprendidas">
+            <li>Introdução Unix e Shell</li>
+            <li>BASH</li>
+            <li>GIT</li>
+            <li>GITHUB</li>
+            <li>HTML</li>
+            <li>CSS - Introdução</li>
+            <li>CSS - Seletores e Posicionamento</li>
+            <li>HTML - Estrutura de página</li>
+            <li>HTML - Semântico</li>
+            <li>Conceitos de internet</li>
+        </ol>
     </main>
 </body>
 
