--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <header id="cabecalho">
+            <h1 id="titulo">titulo</h1>
+        </header>
     </body>
 </html>
