Adicionada uma tabela

--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
     </article>
     <aside id="passagem">
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate nobis sapiente repellat quis, debitis molestiae, quaerat placeat minus sit sunt rem voluptatibus? Itaque magni reprehenderit voluptatem, distinctio fugit libero beatae.</p>
+      <table>
+        <tr>
+          <th>Coluna 1</th>
+          <th>Coluna 2</th>
+        </tr>
+        <tr>
+          <td>Linha 1</td>
+          <td>Linha 1</td>
+        </tr>
+        <tr>
+          <td>Linha 2</td>
+          <td>Linha 2</td>
+        </tr>
+      </table>
     </aside>
   </main>
   <footer id="rodape">
