adicionando os requisitos 3, 4 e 5

--- a/index.html
+++ b/index.html
@@ -7,10 +7,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
     <header id="cabecalho">
         <h1 id="titulo">Marcelo Campos</h1>
     </header>
-
+    <main>
+        <img id="minha_foto" src="images/me.jpg" alt="minha foto">
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Empatia</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Inspect</li>
+            <li>Semantic HTML</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsivo</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+        </ul>
+    </main>
 </body>
 </html>
